--- a/public/index.html
+++ b/public/index.html
@@ -2,47 +2,23 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8" />
-  <title>Inserimento Comanda</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Gestione Comande - Chiosco</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Inserisci Comanda</h1>
-  <form id="comandaForm">
-    <input type="number" name="numeroOrdine" placeholder="Numero ordine" required />
-    <select name="tipo">
-      <option value="panino">Panino</option>
-      <option value="piatto">Piatto</option>
-    </select>
-    <input name="carne" placeholder="Tipo di carne" required />
-    <input name="mozzarella" type="checkbox" /> Mozzarella
-    <input name="scamorza" type="checkbox" /> Scamorza
-    <input name="condimenti" placeholder="Condimenti separati da virgola" />
-    <input name="fritti" placeholder="Fritti separati da virgola" />
-    <button type="submit">Invia</button>
+  <h1>Gestione Comande</h1>
+
+  <form id="formComanda">
+    <input type="number" id="numeroOrdine" placeholder="Numero Ordine" required />
+    <input type="text" id="descrizione" placeholder="Descrizione comanda" required />
+    <button type="submit">Aggiungi Comanda</button>
   </form>
 
-  <script>
-    document.getElementById("comandaForm").addEventListener("submit", async (e) => {
-      e.preventDefault();
-      const form = e.target;
-      const data = {
-        numero: parseInt(form.numeroOrdine.value),
-        tipo: form.tipo.value,
-        carne: form.carne.value,
-        mozzarella: form.mozzarella.checked,
-        scamorza: form.scamorza.checked,
-        condimenti: form.condimenti.value.split(",").map(s => s.trim()).filter(s => s),
-        fritti: form.fritti.value.split(",").map(s => s.trim()).filter(s => s),
-      };
+  <h2>Comande Attive</h2>
+  <ul id="listaComande"></ul>
 
-      await fetch("https://gestione-comande.onrender.com/nuova-comanda", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify(data),
-      });
-
-      form.reset();
-      alert("Comanda inviata!");
-    });
-  </script>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
