Prima versione completa gestione comande

--- a/public/carne.html
+++ b/public/carne.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Carne da Cucina</title>
-<link rel="stylesheet" href="style.css" />
-<script src="/socket.io/socket.io.js"></script>
-<script defer src="carne.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Carne da cucinare</title>
+  <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
-  <h1>Carne da Cucina</h1>
-  <ul id="lista-carne"></ul>
+  <h1>Carne da cucinare</h1>
+  <ul id="listaCarne"></ul>
+
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="js/carne.js"></script>
 </body>
 </html>
