--- a/public/condimenti.html
+++ b/public/condimenti.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Condimenti</title>
-<link rel="stylesheet" href="style.css" />
-<script src="/socket.io/socket.io.js"></script>
-<script defer src="condimenti.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Condimenti</title>
+  <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
   <h1>Condimenti</h1>
-  <ul id="lista-condimenti"></ul>
+  <ul id="listaCondimenti"></ul>
+
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="js/condimenti.js"></script>
 </body>
 </html>
