--- a/public/index.html
+++ b/public/index.html
@@ -1,55 +1,48 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Inserimento Comanda</title>
-<link rel="stylesheet" href="style.css" />
-<script src="/socket.io/socket.io.js"></script>
-<script defer src="index.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Inserimento Comanda</title>
+  <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
-  <h1>Inserimento Comanda</h1>
-  <form id="form-comanda">
-    <label>Numero Ordine: <input type="number" id="numero" required min="1" /></label>
+  <h1>Inserisci Comanda</h1>
+  <form id="formComanda">
+    <label>Numero Ordine: <input type="number" id="numeroOrdine" required /></label><br/>
 
-    <label>Tipo:
-      <select id="tipo" required>
+    <label>Tipo: 
+      <select id="tipoComanda" required>
+        <option value="">--Seleziona--</option>
         <option value="panino">Panino</option>
         <option value="piatto">Piatto</option>
       </select>
-    </label>
+    </label><br/>
 
     <label>Carne:
       <select id="carne" required>
+        <option value="">--Seleziona carne--</option>
         <option value="pollo">Pollo</option>
         <option value="manzo">Manzo</option>
         <option value="maiale">Maiale</option>
       </select>
-    </label>
+    </label><br/>
 
-    <fieldset>
-      <legend>Formaggi</legend>
-      <label><input type="checkbox" id="mozzarella" /> Mozzarella</label>
-      <label><input type="checkbox" id="scamorza" /> Scamorza</label>
-    </fieldset>
+    <label>Condimenti:
+      <input type="checkbox" name="condimenti" value="maionese" /> Maionese
+      <input type="checkbox" name="condimenti" value="ketchup" /> Ketchup
+      <input type="checkbox" name="condimenti" value="senape" /> Senape
+    </label><br/>
 
-    <fieldset>
-      <legend>Condimenti</legend>
-      <label><input type="checkbox" class="condimento" value="maionese" /> Maionese</label>
-      <label><input type="checkbox" class="condimento" value="ketchup" /> Ketchup</label>
-      <label><input type="checkbox" class="condimento" value="senape" /> Senape</label>
-    </fieldset>
-
-    <fieldset>
-      <legend>Fritti</legend>
-      <label><input type="checkbox" class="fritto" value="patatine" /> Patatine</label>
-      <label><input type="checkbox" class="fritto" value="anelli di cipolla" /> Anelli di cipolla</label>
-      <label><input type="checkbox" class="fritto" value="olive ascolane" /> Olive ascolane</label>
-    </fieldset>
+    <label>Fritti:
+      <input type="checkbox" name="fritti" value="patatine" /> Patatine
+      <input type="checkbox" name="fritti" value="anelli" /> Anelli di cipolla
+    </label><br/>
 
     <button type="submit">Aggiungi Comanda</button>
   </form>
-  <div id="feedback"></div>
+
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
